--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,7 +2,7 @@ name: pull_request
 on: pull_request
 jobs:
   build-preview:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v12
@@ -21,7 +21,7 @@ jobs:
   deploy-preview:
     needs:
     - build-preview
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@master
     - uses: actions/download-artifact@master
