--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v12
@@ -19,7 +19,7 @@ jobs:
     - run: nix-shell --run "make lint DEBUG="
     - run: nix-shell --run "make test DEBUG="
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v12
@@ -39,7 +39,7 @@ jobs:
     needs:
     - build # produces the artifact
     - test  # but don't bother deploying if tests failed
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@master
     - uses: actions/download-artifact@master
