--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,9 @@ jobs:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v12
     - uses: cachix/cachix-action@v8
+      with:
+        name: note-maps
+        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
     - uses: actions/download-artifact@master
       with:
         name: apk
