--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-    - run: nix-shell --run "make -e download build DEBUG= FLUTTER_BULD=apk"
+    - run: nix-shell --run "yes | flutter doctor --android-licenses ; make -e download build DEBUG= FLUTTER_BUILD=apk"
     - uses: actions/upload-artifact@v2
       with:
         name: apk
