--- a/flutter/nm_app/android/app/build.gradle
+++ b/flutter/nm_app/android/app/build.gradle
@@ -37,8 +37,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.nm_app"
+        applicationId "com.github.google.notemaps"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
