--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,4 +14,15 @@ jobs:
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
     - run: nix-shell --run "make -e download"
     - run: nix-shell --run "make -e -j lint test"
-    - run: nix-shell --run "make -e build"
+    - run: nix-build -A web
+    runs-on: macos-11.0
+    steps:
+    - uses: actions/checkout@v2.3.4
+    - uses: cachix/install-nix-action@v12
+    - uses: cachix/cachix-action@v8
+      with:
+        name: note-maps
+        authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+    - run: nix-shell --run "make -e download"
+    - run: nix-shell --run "make -e -j lint test"
+    - run: nix-build -A web
