--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v12
+    - uses: cachix/install-nix-action@v15
     - uses: cachix/cachix-action@v8
       with:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-    - run: nix-shell --run "make -e download DEBUG="
-    - run: nix-shell --run "make -e build DEBUG="
+    - run: nix shell -c make -e download DEBUG=
+    - run: nix shell -c make -e build DEBUG=
     - uses: actions/upload-artifact@v2
       with:
         name: result
