--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v12
+    - uses: cachix/install-nix-action@v15
     - uses: cachix/cachix-action@v8
       with:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-    - run: nix-shell --run "make -e download"
-    - run: nix-shell --run "make -e -j lint test"
-    - run: nix-shell --run "make -e build"
+    - run: nix shell -c make -e download
+    - run: nix shell -c make -e -j lint test
+    - run: nix shell -c make -e build
