--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,9 +6,11 @@ jobs:
   build-preview:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v15
-    - uses: cachix/cachix-action@v8
+    - uses: actions/checkout@v2.4.0
+    - uses: cachix/install-nix-action@v16
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - uses: cachix/cachix-action@v10
       with:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
@@ -23,7 +25,7 @@ jobs:
     - build-preview
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2.4.0
     - uses: actions/download-artifact@master
       with:
         name: result
