--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,11 @@ jobs:
   test:
     runs-on: ubuntu-21.10
     steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v15
-    - uses: cachix/cachix-action@v8
+    - uses: actions/checkout@v2.4.0
+    - uses: cachix/install-nix-action@v16
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - uses: cachix/cachix-action@v10
       with:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
@@ -20,9 +22,11 @@ jobs:
   build-apk:
     runs-on: ubuntu-21.10
     steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v15
-    - uses: cachix/cachix-action@v8
+    - uses: actions/checkout@v2.4.0
+    - uses: cachix/install-nix-action@v16
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - uses: cachix/cachix-action@v10
       with:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
@@ -35,9 +39,11 @@ jobs:
   build-web:
     runs-on: ubuntu-21.10
     steps:
-    - uses: actions/checkout@v2.3.4
-    - uses: cachix/install-nix-action@v15
-    - uses: cachix/cachix-action@v8
+    - uses: actions/checkout@v2.4.0
+    - uses: cachix/install-nix-action@v16
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - uses: cachix/cachix-action@v10
       with:
         name: note-maps
         authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
@@ -52,7 +58,7 @@ jobs:
     - build-web
     runs-on: ubuntu-21.10
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2.4.0
     - uses: actions/download-artifact@master
       with:
         name: web
