flutter: update deps and remove targets from the build
Zefyr has moved on a fair bit. The Zefyr/Notus customizations in
third_party are out of date, and the latest version (of course) doesn't
have them.

--- a/dart/nm_delta/pubspec.yaml
+++ b/dart/nm_delta/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   sdk: '>=2.8.1 <3.0.0'
 
 dependencies:
-  quill_delta: ^2.0.0
+  quill_delta: ^3.0.0-nullsafety.2
 
 dev_dependencies:
   pedantic: ^1.9.0
