--- a/dart/nm_delta_notus/pubspec.yaml
+++ b/dart/nm_delta_notus/pubspec.yaml
@@ -10,12 +10,10 @@ environment:
 dependencies:
   nm_delta:
     path: ../nm_delta
-  quill_delta: ^2.0.0
-  notus:
-    path: ../../third_party/zefyr/packages/notus
-  uuid: ^2.2.2
+  quill_delta: ^3.0.0-nullsafety.2
+  uuid: ^3.0.0
   logger: ^0.9.4
 
 dev_dependencies:
   pedantic: ^1.9.0
-  test: ^1.14.4
+  test: ^1.20.0
