--- a/flutter/nm_app/pubspec.yaml
+++ b/flutter/nm_app/pubspec.yaml
@@ -28,10 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
-  zefyr:
-    path: ../../third_party/zefyr/packages/zefyr
-  notus:
-    path: ../../third_party/zefyr/packages/notus
+  zefyr: ^1.0.0-rc.4
   nm_delta_notus:
     path: ../../dart/nm_delta_notus
   nm_delta:
