--- a/.github/workflows/nix-build.yaml
+++ b/.github/workflows/nix-build.yaml
@@ -4,7 +4,7 @@ env:
   NIXPKGS_ALLOW_UNFREE: 1
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: 'ubuntu-24.04'
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v16
