--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,7 +6,7 @@ env:
   NIXPKGS_ALLOW_UNFREE: 1
 jobs:
   build-preview:
-    runs-on: ubuntu-20.04
+    runs-on: 'ubuntu-24.04'
     steps:
     - uses: actions/checkout@v2.4.0
     - uses: cachix/install-nix-action@v16
@@ -25,7 +25,7 @@ jobs:
   deploy-preview:
     needs:
     - build-preview
-    runs-on: ubuntu-20.04
+    runs-on: 'ubuntu-24.04'
     steps:
     - uses: actions/checkout@v2.4.0
     - uses: actions/download-artifact@master
